Github workflows configuration does not install test or development dependencies

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -25,7 +25,7 @@ jobs:
           bundler-cache: true
 
       - name: 🔨 Install dependencies
-        run : bundle install
+        run : bundle install --without development test
 
       - name: 🔨 Build site
         run : bundle exec jekyll build
