--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ defaults:
       path: "_pages"
       type: pages
     values:
+      layout: default
       permalink: /:basename
       is_site: true
   - scope:
